[project]
name = "fastapi"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jeonghoon2", email = "ukidd12@naver.com"},
]
dependencies = [
    "fastapi[standard]>=0.112.0",
    "pyarrow>=17.0.0",
    "pandas>=2.2.2",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
